samples/_failures_safe/1761254321_9086d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d1b9fe5.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_1d1b9fe5.c:154:12: error: missing terminating " character
  154 |     printf("\nTop 10 most frequent words
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1d1b9fe5.c:154:5: error: expected expression at end of input
  154 |     printf("\nTop 10 most frequent words
      |     ^~~~~~
./samples/SAFE/__tmp_1d1b9fe5.c:154:5: error: expected declaration or statement at end of input
